# GTPlanner

./: .coverage  .env.example  .gitignore  CHANGELOG.md  CLEANUP_SUMMARY.md  CMakeLists.txt  DESIGN_NODE_PROMPT_OPTIMIZATION.md  Dockerfile  ENHANCED_LANGUAGE_DETECTION_README.md  ERROR_HANDLING_UPGRADE.md  INCREMENTAL_UPDATE_SUMMARY.md  INDEX_BUILD_REFACTOR.md  LICENSE.md  OPTIMIZATION_REPORT.md  ORCHESTRATOR_PROMPT_OPTIMIZATION.md  PREFAB_FUNCTIONS_DETAIL_IMPLEMENTATION.md  PROJECT_SUMMARY.md  PULL_REQUEST.md  QUICK_START_ERROR_HANDLING.md  README.md  README_ja.md  README_zh.md  REFACTOR_SUMMARY.md  cache_manager.py  check_config.py  config.py  contribute.md  database_manager.py  demo_config_validation.py  demo_enhanced_language_detection.py  demo_incremental_update.py  example_badcases.json  example_knowledge_base.json  fastapi_main.py  final_pr_test.py  gtplanner.py  gtplanner_badcases.json  gtplanner_knowledge_base.json  logging_config.py  main.py  (+29 more)
.claude/: plugin.json  settings.local.json
.github/: dependabot.yml  pull_request_template.md
PRD/: 定制一份考公计划书-20250822.md
agent/: REFACTOR_2AGENTS.md  base_node.py  context_types.py  stateless_planner.py
benchmarking/: __init__.py  evaluator_core.py  example.py  file_utils.py  metrics.py  test_case.py
cache/: query_85ea6b7a9f1d7651fd426178196f55f2_d751713988987e9331980363e24189ce.pkl  query_b257278e3ba360f4ae227f488e06b7de_bce9ee9153463a9b1dcb7721def772f3.pkl
cfg/: CostWeights.cfg
docs/: CONTRIBUTING_TESTS.md  badcase_system_guide.md  badcase_system_summary.md  configuration.md  configuration_ja.md  configuration_zh.md  deployment-403-fix.md  export_document_usage.md  incremental_index_update.md  logging-and-error-handling.md  prefab_function_query_tools.md  security-and-rate-limit.md  sse-streaming-implementation.md  validation-system-api.md  validation-system-delivery-checklist.md  validation-system-deployment.md  validation-system-final-summary.md  validation-system-usage-guide.md
document_embedding/: __init__.py  api_endpoints.py  document_processor.py
(+327 files in other folders)
