<package format="2">
  <name>gtplanner</name>
  <version>0.1.0</version>
  <description>GTPlanner: A lightweight global planner</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>dynamic_reconfigure</depend>
</package>
